--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 
 	<world>
 
-		<ground>
+		<personnage>
 
-			<mazars style="transition: transform 0.05s linear; transform: translateX(0vw);"><img id="mazaDisplay" src="assets/pika.gif" alt=""></mazars>
+			<mazars style="float: left; transition: transform 0.05s linear; transform: translateX(00vw);"><img id="mazaDisplay" src="pika.gif" alt=""><img style="display: none" id="mazaDisplayStatic" src="Cactus1.jpg" alt=""></mazars>
 			
-			<invader style="height: 100px; width: 100px; z-index: 99; background-color: red; position: absolute; transition: transform 0.05s linear; transform: translateX(100vw);"></invader>
+			<invader style="float: left;transition: transform 0.05s linear; transform: translateX(100vw);"><img id="invada0static" src="Cactus2.jpg" alt=""></invader>
 			
-			<invader style="height: 100px; width: 100px; z-index: 99; background-color: red; position: absolute; transition: transform 0.05s linear; transform: translateX(200vw);"></invader>
+			<invader style="float: left; transition: transform 0.05s linear; transform: translateX(200vw);"><img id="invada1static" src="Cactus3.jpg" alt=""></invader>
 		
-			<invader style="height: 100px; width: 100px; z-index: 99; background-color: red; position: absolute; transition: transform 0.05s linear; transform: translateX(300vw);"></invader>
+			<invader style="float: left; transition: transform 0.05s linear; transform: translateX(300vw);"><img id="invada2static" src="Cactus.jpg" alt=""></invader>
+
+		</personnage>
+
+		<ground>
 
 			<div class="message" id="0" style="display:none;">
 				Bienvenue chez les SCEP Invaders !<br> Nous sommes l’association digitale et vidéoludique d’ESCP Europe. Depuis 2014, nous organisons tournois et formations (coding, design) et collaborons avec des entreprises du digital.<br><br>SCEP Invaders se tourne vers l’avenir avec son nouveau projet!<br><br>  Press Enter to continue !
