--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 		<source src="hotline-miami-2.mp3" type="audio/mpeg">
 	</audio>
 
-	<world>
+	<img id="begin" src="pika.gif" alt="">
+
+	<world style="display: none">
 
 		<personnage>
 
@@ -38,6 +40,11 @@
 			
 		</ground>	
 	</world>
+
+	<end style="display:none">
+		<div> Pour en savoir plus : clique <a href=""> Ici </a> </div>
+	</end>
+
 	<script src="mazars.js"></script>
 </body>
 	
