--- a/index.html
+++ b/index.html
@@ -4,46 +4,55 @@
 </head>
 <body>
 
-	<audio loop>
+	<audio loop autoplay="true">
 		<source src="hotline-miami-2.mp3" type="audio/mpeg">
 	</audio>
 
-	<img id="begin" src="pika.gif" alt="">
+	<firstScreen>
+		<div id="begin">
+			<img src="logopix.png">
+		</div>
+		<p id="title">Invaders's Adventure</p>
+		<p id="enterFirst"> Press enter to start </p>
+		<p id="copyright">A scep invaders production</p>		
+	</firstScreen>	
+
 
 	<world style="display: none">
+	
+		<cadre></cadre>
 
-		<personnage>
+		<personnages>
 
-			<mazars style="float: left; transition: transform 0.05s linear; transform: translateX(00vw);"><img id="mazaDisplay" src="pika.gif" alt=""><img style="display: none" id="mazaDisplayStatic" src="Cactus1.jpg" alt=""></mazars>
+			<mazars style="transition: transform 0.05s linear; transform: translateX(10.5vw);"><img id="mazaDisplay" src="mazarsImmo.png" alt=""></mazars>
 			
-			<invader style="float: left;transition: transform 0.05s linear; transform: translateX(100vw);"><img id="invada0static" src="Cactus2.jpg" alt=""></invader>
+			<invader style="transition: transform 0.05s linear; transform: translateX(95vw);"><img id="invada0static" src="0gauche.png" alt=""></invader>
 			
-			<invader style="float: left; transition: transform 0.05s linear; transform: translateX(200vw);"><img id="invada1static" src="Cactus3.jpg" alt=""></invader>
+			<invader style=" transition: transform 0.05s linear; transform: translateX(150vw);"><img id="invada1static" src="1gauche.png" alt=""></invader>
 		
-			<invader style="float: left; transition: transform 0.05s linear; transform: translateX(300vw);"><img id="invada2static" src="Cactus.jpg" alt=""></invader>
+			<invader style=" transition: transform 0.05s linear; transform: translateX(220vw);"><img id="invada2static" src="2gauche.png" alt=""></invader>
 
-		</personnage>
+		</personnages>
 
-		<ground>
 
-			<div class="message" id="0" style="display:none;">
-				Bienvenue chez les SCEP Invaders !<br> Nous sommes l’association digitale et vidéoludique d’ESCP Europe. Depuis 2014, nous organisons tournois et formations (coding, design) et collaborons avec des entreprises du digital.<br><br>SCEP Invaders se tourne vers l’avenir avec son nouveau projet!<br><br>  Press Enter to continue !
-			</div>
+		<div class="message" id="0" style="display:none;">
+			Bienvenue chez les <or>SCEP Invaders</or> !<br> Nous sommes l’association digitale et vidéoludique d’ESCP Europe. Depuis 2014, nous organisons tournois et formations (coding, design) et collaborons avec des entreprises du digital.<br><br>SCEP Invaders se tourne vers l’avenir avec <or>son nouveau projet</or>!<br><br>  Press <enter>Enter</enter> to continue !
+		</div>
 
-			<div class="message" id="1" style="display:none">
-				"Hacke ton futur" réunit étudiants et professionnels de l’industrie lors d’une journée de workshops pour découvrir les métiers du digital.<br><br> En équipes, étudiants et managers mènent ensemble un projet concret et progressent grâce aux compétences acquises à chaque atelier. Plus qu’un simple forum, son cadre informel et inclusif favorise une vraie rencontre entre étudiants et professionnels.<br><br> Press Enter to continue !
-			</div>
+		<div class="message" id="1" style="display:none;">
+			<or>"Hacke ton futur"</or> réunit étudiants et professionnels de l’industrie lors d’une journée de workshops pour découvrir les <or>métiers du digital</or>.<br><br> En équipes, étudiants et managers mènent ensemble un projet concret et progressent grâce aux compétences acquises à chaque atelier. Plus qu’un simple forum, son cadre informel et inclusif favorise une vraie rencontre entre étudiants et professionnels.<br><br> Press <enter>Enter</enter> to continue !
+		</div>
 
-			<div class="message" id="2" style="display:none">
-				Nous prévoyons la réalisation de cet événement pour Mai 2018 et pour un budget total de 6000 euros.<br> Nous sommes déjà en contact avec 6 entreprises du digital et de l’e-sport. L’aventure ne fait que commencer !<br><br> Press Enter to continue !
-			</div>
+		<div class="message" id="2" style="display:none">
+			Nous prévoyons la réalisation de cet événement pour <or>Mai 2018</or> et pour un <or>budget total de 6000 euros</or>.<br> Nous sommes déjà en contact avec 6 entreprises du digital et de l’e-sport. L’aventure ne fait que commencer !<br><br> Press <enter>Enter</enter> to continue !
+		</div>
 			
-		</ground>	
 	</world>
 
 	<end style="display:none">
-		<div> Pour en savoir plus : clique <a href=""> Ici </a> </div>
-	</end>
+		<div id='messageEnd'> Pour en savoir plus : <a href="annexe.pdf"> télécharge l'annexe </a> </div>
+	</end>		
+
 
 	<script src="mazars.js"></script>
 </body>
