--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<img src="logopix.png">
 		</div>
 		<p id="title">Invaders's Adventure</p>
-		<p id="enterFirst"> Press enter to start </p>
+		<p id="enterFirst"> Press <enter>enter</enter> to start </p>
 		<p id="copyright">A scep invaders production</p>		
 	</firstScreen>	
 
@@ -50,7 +50,7 @@
 	</world>
 
 	<end style="display:none">
-		<div id='messageEnd'> Pour en savoir plus : <a href="annexe.pdf"> télécharge l'annexe </a> </div>
+		<div id='messageEnd'> Pour en savoir plus : <a href="annexe.pdf"> Cliquez ici ! </a> </div>
 	</end>		
 
 
