chargement plus safe

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<img src="logopix.png">
 		</div>
 		<p id="title">Invaders's Adventure</p>
-		<p id="enterFirst"> Press <enter>enter</enter> to start </p>
+		<p id="enterFirst"> Chargement ...</p>
 		<p id="copyright">A scep invaders production</p>		
 	</firstScreen>	
 
