chargement plus safe

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	</world>
 
 	<end style="display:none">
-		<div id='messageEnd'> Pour en savoir plus : <a href="annexe.pdf"> Cliquez ici ! </a> </div>
+		<div id='messageEnd'> Pour en savoir plus : <a href="Annexe.pdf"> Cliquez ici ! </a> </div>
 	</end>		
 
 
