--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 	
 		<cadre></cadre>
 
+		<div id="advise"> Press <or>-></or> to explore ! </div>
+
 		<personnages>
 
 			<mazars style="transition: transform 0.05s linear; transform: translateX(10.5vw);"><img id="mazaDisplay" src="mazarsImmo.png" alt=""></mazars>
